CHANGES IN FLTK 1.1.7

	- Fl_Help_View::topline() incorrectly set the changed()
	  flag (STR #631)
	- Fl_Choice::value() now supports NULL or -1 to deselect
	  the current item (STR #637)
	- More VC++ 6 project file fixes (STR #638)
	- Added missing Watcom makefile in the test directory
	  (STR #636)
	- Fl_Text_Display::word_left would hang if the cursor
	  was at position 0 (STR #635)


CHANGES IN FLTK 1.1.6

	- Documentation updates (STR #552, STR #608)
	- Added the 2.0 Fl_Widget::copy_label() method to
	  allow FLTK 1.x applications to have their label
	  strings managed by FLTK (STR #630)
	- Added Fl::delete_widget() method to safely delete
	  widgets in callback methods (STR #629)
	- Fl_Widget::damage(uchar,int,int,int,int) didn't clip
	  the bounding box properly (STR #626)
	- Windows could appear on the wrong screen on OSX (STR
	  #628)
	- Fl_Double_Window produced an error on resize with X11
	- FLUID didn't display menu items using images properly
	  (STR #564)
	- Fl_Sys_Menu_Bar didn't compile on case-sensitive
	  file-systems (STR #622)
	- FLUID didn't handle default function parameters
	  properly (STR #579)
	- Moving or resizing widgets in FLUID didn't always
	  update the widget panel (STR #600)
	- FLTK windows could appear off-screen on X11 (STR #586)
	- The configure script did not support
	  --disable-localfoo to completely disable image file
	  support (STR #582)
	- The Visual C++ 6.0 project files still listed the old
	  JPEG, PNG, and ZLIB library names (STR #577)
	- Fixed the scandir() conditional code for HP-UX 11i
	  (STR #585)
	- Fl_Text_Display didn't support CTRL/CMD-A/C (STR #601)
	- Watcom fixes (STR #581, STR #584, STR #594, STR #595,
	  STR #623, STR #627)
	- Fixed library include order when building DSOs on
	  MacOS X (STR #596)
	- fl_xid() could cause a WIN32 application to crash (STR
	  #560, STR #576, STR #618)
	- Fl_Browser::remove_() removed the item from the list
	  before computing the item height, which caused